# rust_gophercises

./: README.md
01_quiz/: Cargo.toml
01_quiz/catalogues/: invalid_header.csv  valid.csv
01_quiz/src/: main.rs
02_url-short/: Cargo.toml  readme.md
02_url-short/src/: main.rs  mappings.yaml
03_choose-your-own-adventure/: Cargo.toml
03_choose-your-own-adventure/src/: main.rs
