[package]
name = "url-short"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4.0"
axum-sqlite = "0.1.0"
rusqlite = "0.27.0"
